[package]
name = "envy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.11", features = ["derive"] }
pathdiff = "0.2.1"
serde = { version = "1.0.171", features = ["derive"] }
walkdir = "2.3.3"

serde_json = "1.0"
