[package]
name = "envyr"
description = "Envyr is a tool to automagically package an application and run it in a sandboxed environment."
documentation = "https://github.com/tchaudhry91/envyr"
homepage = "https://github.com/tchaudhry91/envyr"
license = "Apache-2.0"
categories = ["command-line-utilities", "virtualization"]
repository = "https://github.com/tchaudhry91/envyr"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.11", features = ["derive"] }
pathdiff = "0.2.1"
serde = { version = "1.0.171", features = ["derive"] }
walkdir = "2.3.3"

serde_json = "1.0"
handlebars = "4.3.7"
subprocess = "0.2.9"
home = "0.5.5"
log = "0.4.19"
simplelog = "0.12.1"
time = "0.3.47"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
